refactor: 공통 도메인 로직 리팩토링 (#364)